added graphql support